WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15156
REGRESSION (
r24594
-
r24668
): The bottom of styled <select> button text is clipped out
https://bugs.webkit.org/show_bug.cgi?id=15156
Summary
REGRESSION (r24594-r24668): The bottom of styled <select> button text is clip...
mitz
Reported
2007-09-07 11:57:31 PDT
In the attached test case, the descenders of the lowercase Ps are clipped out. I think the regression happened in <
http://trac.webkit.org/projects/webkit/changeset/24604
>. This is in Radar as <
rdar://problem/5464301
>.
Attachments
Reduction
(111 bytes, text/html)
2007-09-07 11:58 PDT
,
mitz
no flags
Details
Patch
(31.02 KB, patch)
2007-09-07 14:48 PDT
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-09-07 11:58:15 PDT
Created
attachment 16220
[details]
Reduction
mitz
Comment 2
2007-09-07 14:48:45 PDT
Created
attachment 16221
[details]
Patch
mitz
Comment 3
2007-09-10 14:25:59 PDT
Landed by Tristan in <
http://trac.webkit.org/projects/webkit/changeset/25471
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug