WebCore:

Reviewed by Adele Peterson.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15156
          REGRESSION (r24594-r24668): The bottom of styled <select> button text is clipped out
          <rdar://problem/5464301>

        Test: fast/forms/menulist-clip.html

        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::controlClipRect): Use correct coordinates for
        the inner block's content rect.

LayoutTests:

        Reviewed by Adele Peterson.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15156
          REGRESSION (r24594-r24668): The bottom of styled <select> button text is clipped out
          <rdar://problem/5464301>

        * fast/forms/menulist-clip.html: Added.
        * platform/mac/fast/forms/menulist-clip-expected.checksum: Added.
        * platform/mac/fast/forms/menulist-clip-expected.png: Added.
        * platform/mac/fast/forms/menulist-clip-expected.txt: Added.



Canonical link: https://commits.webkit.org/19945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25471 268f45cc-cd09-0410-ab3c-d52691b4dbfc